edited css to stop the data visual text squish

--- a/v11placeholder/static/css/vamod.css
+++ b/v11placeholder/static/css/vamod.css
@@ -126,8 +126,9 @@
 		.telehealth_text {
 			color: #FFFFFF;
 			font-size: 12px;
-			width: 100%;
-      line-height: 5%;
+      width: 100%;
+      /* changed this line-height from 5% to stop the squish */
+      line-height: 150%;
       padding-top: 10px;
       padding-bottom: 10px;
       padding-right: 30px;
